--- a/src/scss/components/header/_header-layout.scss
+++ b/src/scss/components/header/_header-layout.scss
@@ -14,7 +14,6 @@
     &__community {
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 56px;
     }
     &__content {
