--- a/src/scss/components/header/_header.scss
+++ b/src/scss/components/header/_header.scss
@@ -77,6 +77,7 @@ body {
 
     &__content {
         margin-inline: 35px;
+        margin-block-start: 86px;
     }
 
     &__title {
